# celery-example

./: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: celery_worker.py  config.py  main.py  redis_client.py  schemas.py  tasks.py  utils.py
