[project]
name = "celery-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "redis>=5.2.1",
    "uvicorn>=0.35.0",
]
